# oil_tank

./: .gitignore  README.md  large_image_data_with_dates.csv  pyproject.toml  unet_tank_shadow.pt  uso_ia.md
config/: oil_storage_sites.json
financial_data/: oil_prices_2018.csv
predictions/: classic_vision_patch_01_5_2_open_roof_volumes.csv
src/: dataset.py  main.py
src/classic_vision/: hough.py  l_channel.py  main.py  shadow.py
src/dumb/: assign_data.py
src/ml_computer_vision/: conversion.py  converter.py  labels.py  main.py  predict_unet.py  test.py  unified.py
src/ml_model/: __init__.py  build_volume_price_dataset.py  download_oil_prices.py  prepare_volume_features.py  train_price_model.py  validate_training_data.py
src/yolo/: split_dataset.py
